--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-header {
-    background-color: #424E61;
-    color: white;
+.cabecalho-imagem{
+    width: 20
+}
+.cabecalho-lista-item{
+
+    margin: 0 16px;
+    font-size: 24px;
 }
